<resources>
    <string name="team_two_title">Команда 2</string>
    <string name="date_title">Дата</string>
    <string name="score_title">Счёт</string>
    <string name="team_one_title">Команда 1</string>
    <string name="match_title">Матч</string>
    <string name="app_name">Android_Sport_project</string>
    <string name="Splash">Splash Screen!</string>
    <string name="button">Волейбол</string>
    <string name="button1">Футбол</string>
    <string name="button3">Баскетбол</string>
    <string name="some_id">cпортТАБЛО</string>
    <string name="mach_name">Название матча</string>
    <string name="team1">Команда №1</string>
    <string name="team2">Команда №2</string>
    <string name="shapka">спортТАБЛО </string>
    <string name="match_name">Лига чемпионов</string>
    <string name="team_name">Название команды</string>
    <string name="start_game">НАЧАТЬ ИГРУ</string>
    <string name="next_window">перейти к игре</string>
    <string name="rules">правила</string>
    <string name="vb_partii">5 партий</string>
    <string name="vb_rule1">Розыгрыш мяча - это игровые действия с момента удара при подаче до того, как мяч выйдет из игры. Если подающая команда выигрывает розыгрыш мяча, она набирает очко и продолжает подавать</string>
    <string name="vb_ochki">25 очков</string>
    <string name="vb_rule2">Команда набирает очко: при успешном приземлении мяча на площадке соперника; когда команда соперника совершает ошибку; когда команда соперника получает замечание.</string>
    <string name="vb_teams">2 команды</string>
    <string name="vb_rule3">Партия выигрывается командой, которая первой набирает 25 очков с преимуществом минимум в 2 очка. В случае равного счета 24-24, игра продолжается до достижения преимущества в 2 очка (26-24, 27-25 и т. д.).</string>
    <string name="vb_players">по 12 игроков</string>
    <string name="vb_rule4">Победитель матча - это та команда, которая выигрывает три партии. В случае равного счета 2-2, решающая (пятая) партия играется до 15 очков с минимальным преимуществом в 2 очка.</string>
    <string name="resultMatch">Результаты Матчей</string>
    <string name="fb_teams">2 команды</string>
    <string name="fb_rule1">Футбол - это командная игра, цель которой забить в ворота соперников как можно больше голов мячом, не нарушив правила и защитив одновременно свои ворота от попадения мяча </string>
    <string name="fb_players">по 11 игроков</string>
    <string name="fb_rule2">У каждого игрока на игровом поле своя задача: защтника, полузащитника, нападающего, вратаря..</string>
    <string name="fb_times">2 тайма</string>
    <string name="fb_rule3">За соблюдением правил следят арбитры: один на поле, двое стоят у боковых линий и дополнительный судья за линией ворот.</string>
    <string name="fb_time">по 45 минут</string>
    <string name="fb_rule4">Фол -действие, которое противоречит правилам игры. При нарушении правил назначается пенальти (11 м) или свободный удар.</string>
    <string name="return_button">На главную</string>
    <string name="bb_times">4 тайма </string>
    <string name="bb_rule1">Заброшенный мяч может приносить разное количество очков. Во время штрафного броска +1 . Со средней или близкой дистанции (ближе 3-х очковой линии) + 2 очка. Из-за трехочковой линии +3. 5 минутный овертайм назначается, когда основное время закончилось равным счётом обоих команд.</string>
    <string name="bb_time">по 10 минут</string>
    <string name="bb_rule2">Правило 3 секунд: игроку атакующей команды нельзя находиться в зоне штрафного броска более 3 секунд. Правило 2 шагов: игроку можно сделать только 2 шага с мячом, после чего он должен либо произвести бросок, либо отдать пас. Играть только руками Запрещается останавливаться с мячом</string>
    <string name="bb_teams">2 команды</string>
    <string name="bb_rule3">Случайное прикосновение к мячу отличной от руки частью тела не считается нарушением, в отличие от целенаправленной игры ногой или кулаком. </string>
    <string name="bb_players">по 5 игроков</string>
    <string name="bb_rule4">Обычно в команде по 12 игроков, но на поле могут играть только по 5 человек от команды.</string>
</resources>
