<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg3"
    tools:context=".rules.VolleyballRules">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/shapka_gradient">

        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="69dp"
            android:layout_height="38dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="13dp"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="2dp"
            android:text="@string/shapka"
            android:textAppearance="@style/shapka" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/VbStarter"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="200dp"
                android:layout_marginRight="100dp"
                android:background="@drawable/rectangle_1"
                android:text="@string/next_window"
                android:textAppearance="@style/Button_Game" />

            <Button
                android:id="@+id/Vb_scroll"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="100dp"
                android:background="@drawable/rectangle_1"
                android:text="@string/rules"
                android:textAppearance="@style/Button_Game" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="50dp">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/vb_partii"
                    android:textAppearance="@style/Text_high_Screen3"/>

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/vb_ochki"
                    android:textAppearance="@style/Text_high_Screen3"/> />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/vb_rule1"
                    android:textAppearance="@style/Text_low_Screen3"/> />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/vb_rule2"
                    android:textAppearance="@style/Text_low_Screen3"/> />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/vb_teams"
                    android:textAppearance="@style/Text_high_Screen3"/> />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/vb_players"
                    android:textAppearance="@style/Text_high_Screen3"/> />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/vb_rule3"
                    android:textAppearance="@style/Text_low_Screen3"/> />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/vb_rule4"
                    android:textAppearance="@style/Text_low_Screen3"/> />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>